--- a/Calculator/wwwroot/index.html
+++ b/Calculator/wwwroot/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">Loading...</div>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="/_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
