--- a/Calculator/wwwroot/index.html
+++ b/Calculator/wwwroot/index.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Calculator</title>
-    <base href="/antlr-meets-web-assembly"/>
 </head>
 
 <body>
     <div id="app">Loading...</div>
-    <script src="/_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
